--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,5 +44,5 @@ jobs:
   #  parameters: {tox: 'py38', python: '3.8', os: 'linux'}
   #
   - template: azure-template-docker-job.yml
-    parameters: {os: 'linux', docker_task: 'build and test'}
+    parameters: {os: 'linux', docker_task: 'build_and_test'}
 #
