--- a/azure-template-docker-job.yml
+++ b/azure-template-docker-job.yml
@@ -25,6 +25,7 @@ jobs:
   - task: DockerInstaller@0
     displayName: "Docker Installer"
     inputs:
-        dockerVersion: 17.09.0-ce
+        #dockerVersion: 17.09.0-ce
+        dockerVersion: 19.03.9
         releaseType: stable
   #
