--- a/azure-template-docker-job.yml
+++ b/azure-template-docker-job.yml
@@ -22,6 +22,9 @@ jobs:
   - bash: echo "variables - py_module ${{variables.py_module}} image_name ${{variables.image_name}} registry_user ${{variables.registry_user}} "
   - bash: echo "parameters - docker_task ${{parameters.docker_task}} os ${{parameters.os}}"
   #
+  - checkout: self
+    submodules: true
+  #
   - task: DockerInstaller@0
     displayName: "Docker Installer"
     inputs:
@@ -29,3 +32,33 @@ jobs:
         dockerVersion: 19.03.9
         releaseType: stable
   #
+  - ${{ if startsWith(parameters.docker_task, 'build_and_test') }}:
+    - bash: |
+        set -e
+        pwd
+        REGISTRY_USER=${{ variables.registry_user }}
+        #
+        IMAGE_NAME=${IMAGE_NAME:-"${{ variables.image_name }}"}
+        TAG_TEST=${TAG_TEST:-"unittest"}
+        TAG_BASE=${TAG_BASE:-"test"}
+        PY_MODULE=${PY_MODULE:-"${{ variables.py_module }}"}
+        #
+        VER=`grep '__version__' rcsb/app/${PY_MODULE}/__init__.py | awk '{print $3}' | tr -d '"'`
+        #
+        docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
+                    --build-arg VCS_REF=`git rev-parse --short HEAD` \
+                    --build-arg VERSION=$VER \
+                    --tag ${REGISTRY_USER}/${IMAGE_NAME}:${TAG_TEST} \
+                    --file ./Dockerfile.${TAG_BASE} .
+        #
+        #
+        docker rm -f ${IMAGE_NAME}
+        echo "Begin running unittests on image ${IMAGE_NAME}"
+        docker run --name ${IMAGE_NAME} ${REGISTRY_USER}/${IMAGE_NAME}:${TAG_TEST} tox >& /dev/null || {
+            echo "Unittests failing for ${IMAGE_NAME} ---- return code: $?"
+            docker logs ${IMAGE_NAME} >& ${IMAGE_NAME}-unittest.log
+            docker rmi -f ${IMAGE_NAME}
+            docker rm -f ${IMAGE_NAME}
+            exit 1
+        }
+      displayName: "Build and test image"
