Pipeline dev add publish step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,4 +45,6 @@ jobs:
   #
   - template: azure-template-docker-job.yml
     parameters: {os: 'linux', docker_task: 'build_and_test'}
+  - template: azure-template-docker-publish-job.yml
+    parameters: {os: 'linux', docker_task: 'publish'}
 #
