--- a/azure-template-docker-publish-job.yml
+++ b/azure-template-docker-publish-job.yml
@@ -36,15 +36,17 @@ jobs:
         dockerVersion: 19.03.9
         releaseType: stable
   #
+  - task: Docker@2
+    displayName: "Login to DockerHub"
+    inputs:
+        command: login
+        containerRegistry: dockerhubtest
+  #
   #
 
   - ${{ if startsWith(parameters.docker_task, 'publish') }}:
     #
-    - task: Docker@2
-      displayName: Login to DockerHub
-      inputs:
-         command: login
-         containerRegistry: dockerhubtest
+
     #
     - bash: |
         set -e
