--- a/azure-template-docker-publish-job.yml
+++ b/azure-template-docker-publish-job.yml
@@ -42,37 +42,4 @@ jobs:
         command: login
         containerRegistry: $(dockerhubtest)
   #
-  - ${{ if startsWith(parameters.docker_task, 'publish') }}:
-    - bash: |
-        set -e
-        pwd
-        REGISTRY_USER=${{ variables.registry_user }}
-        #
-        IMAGE_NAME=${IMAGE_NAME:-"${{ variables.image_name }}"}
-        TAG_TEST=${TAG_TEST:-"unittest"}
-        TAG_BASE=${TAG_BASE:-"test"}
-        PY_MODULE=${PY_MODULE:-"${{ variables.py_module }}"}
-        #
-        VER=`grep '__version__' rcsb/app/${PY_MODULE}/__init__.py | awk '{print $3}' | tr -d '"'`
-        #
-        #docker rmi -f ${IMAGE_NAME}
-        #docker rmi -f ${IMAGE_NAME}:${TAG_TEST}
-        #docker rm -f ${IMAGE_NAME}
-        #
-        docker build --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
-                    --build-arg VCS_REF=`git rev-parse --short HEAD` \
-                    --build-arg VERSION=$VER \
-                    --tag ${REGISTRY_USER}/${IMAGE_NAME}:${TAG_BASE} \
-                    --tag ${REGISTRY_USER}/${IMAGE_NAME}:${VER} \
-                    --file ./Dockerfile  .
-        #
-        docker image ls
-    #
-    - task: Docker@2
-      displayName: Push
-      inputs:
-        command: push
-        containerRegistry: dockerhubtest
-        repository: ${{ variables.image_name }}
-        # tags: latest
-    displayName: "Build and test image"
+  - bash: echo "DONE"
