--- a/azure-template-docker-publish-job.yml
+++ b/azure-template-docker-publish-job.yml
@@ -40,6 +40,6 @@ jobs:
     displayName: "Login to DockerHub"
     inputs:
         command: login
-        containerRegistry: $(dockerhubtest)
+        containerRegistry: dockerhubtest
   #
   - bash: echo "DONE"
