Pipeline add docker push

--- a/azure-template-docker-publish-job.yml
+++ b/azure-template-docker-publish-job.yml
@@ -72,3 +72,12 @@ jobs:
         #
         docker image ls
       displayName: "Production build script"
+    - task: Docker@2
+      displayName: "Push to DockerHub"
+      inputs:
+          command: push
+          containerRegistry: dockerhubtest
+          repository: ${{ variables.image_name }}
+    #
+    - bash: echo "DONE with PUSH"
+    #
