--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,8 @@ jobs:
   - template: azure-template-tox-job.yml
     parameters: {tox: 'test_coverage', python: '3.8', os: 'linux'}
   #
-  #- template: azure-template-tox-job.yml
-  #  parameters: {tox: 'py38', python: '3.8', os: 'linux'}
+  - template: azure-template-tox-job.yml
+    parameters: {tox: 'py38', python: '3.8', os: 'linux'}
   #
   #- template: azure-template-tox-job.yml
   #  parameters: {tox: 'py38', python: '3.8', os: 'macos'}
@@ -41,7 +41,7 @@ jobs:
   #  parameters: {tox: 'py38', python: '3.8', os: 'macos'}
   #
   - template: azure-template-publish-job.yml
-    parameters: {tox: 'test_coverage', python: '3.8', os: 'linux'}
+    parameters: {tox: 'py38', python: '3.8', os: 'linux'}
   #
   - template: azure-template-docker-job.yml
     parameters: {os: 'linux', docker_task: 'build_and_test'}
