--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -20,6 +20,7 @@ jobs:
       vmImage: 'ubuntu-latest'
   dependsOn:
   - ${{ format('build_test_{0}_{1}', parameters.tox, parameters.os) }}
+  - ${{ format('build_test_{0}_{1}', 'test_coverage', parameters.os) }}
   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
   #
   steps:
