--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,15 +24,15 @@ schedules:
   always: true
 
 jobs:
-  - template: azure-template-tox-job.yml
+  - template: azure/azure-template-tox-job.yml
     parameters: {tox: 'format_pep8', python: '3.8', os: 'linux'}
-  - template: azure-template-tox-job.yml
+  - template: azure/azure-template-tox-job.yml
     parameters: {tox: 'lint_pylint', python: '3.8', os: 'linux'}
   #
-  - template: azure-template-tox-job.yml
+  - template: azure/azure-template-tox-job.yml
     parameters: {tox: 'test_coverage', python: '3.8', os: 'linux'}
   #
-  - template: azure-template-tox-job.yml
+  - template: azure/azure-template-tox-job.yml
     parameters: {tox: 'py38', python: '3.8', os: 'linux'}
   #
   #- template: azure-template-tox-job.yml
