Updates for tox 4

--- a/tox.ini
+++ b/tox.ini
@@ -54,24 +54,21 @@ skip_missing_interpreters = true
 skipsdist = false
 
 [testenv]
-passenv = CONFIG_SUPPORT_TOKEN_ENV OE_LICENSE CACHE_PATH
-whitelist_externals = echo
-deps = echo
+passenv = CONFIG_SUPPORT_TOKEN_ENV,OE_LICENSE,CACHE_PATH
+allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
 
 [testenv:py39]
 description = 'Run unit tests (unittest runner) using {envpython}'
-whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython = python3.9
 skip_install = true
 recreate = false
 alwayscopy=true
-usedevelop=true
-deps = echo
+package = editable-legacy
+deps =
        -r requirements.txt
 commands =
     echo "Starting {envname}"
@@ -91,12 +88,9 @@ description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 skip_install = true
 recreate = false
 deps =
-    echo
     flake8
     # This plugin is no longer compatible with latest pydocstyles -
     # flake8-docstrings>=0.2.7
@@ -112,13 +106,10 @@ description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 skip_install = true
 recreate = false
 
 deps =
-    echo
     pylint
     -r requirements.txt
 commands =
@@ -132,13 +123,10 @@ description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 skip_install = true
 recreate = false
 
 deps =
-    echo
     black>=21.5b1
     -r requirements.txt
     #    isort>=4.3.20
@@ -154,14 +142,11 @@ description = 'Run test coverage analysis'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 skip_install = true
 recreate = false
 alwayscopy=true
-usedevelop=true
+package = editable-legacy
 deps =
-    echo
     coverage
     -r requirements.txt
 
