Update history and version

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,7 @@ coverage_cutoff = 70
 #          11-Dec-2019 jdw Py38 version
 #          18-Aug-2020 jdw change tp skip_install= True recreate        = False
 #           6-Aug-2021 jdw Py39 version
+#          23-Dec-2022 aae updates for tox 4
 #
 ##
 [tox]
