--- a/tox.ini
+++ b/tox.ini
@@ -59,6 +59,7 @@ passenv = CONFIG_SUPPORT_TOKEN_ENV,OE_LICENSE,CACHE_PATH
 allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
+basepython = py39: python3.9
 
 [testenv:py39]
 description = 'Run unit tests (unittest runner) using {envpython}'
